@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
@@ -5,7 +6,7 @@
 
 	<groupId>com.xeiam.xchange</groupId>
 	<artifactId>xchange-parent</artifactId>
-	<version>1.7.0-SNAPSHOT</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>XChange Parent</name>
@@ -26,6 +27,9 @@
 		<developer>
 			<name>Gary Rowe</name>
 			<email>g.rowe@froot.co.uk</email>
+		</developer>
+		<developer>
+			<name>Matija Mazi</name>
 		</developer>
 	</developers>
 
@@ -65,20 +69,55 @@
 	</scm>
 
 	<ciManagement>
-		<url>http://ci.xeiam.com/</url>
+		<url>https://travis-ci.org/timmolter/XChange</url>
 	</ciManagement>
 
 	<modules>
-		<module>xchange-core</module>
-		<module>xchange-mtgox</module>
-		<module>xchange-examples</module>
-		<module>xchange-cavirtex</module>
-		<module>xchange-btce</module>
-		<module>xchange-openexchangerates</module>
-		<module>xchange-bitstamp</module>
-		<module>xchange-campbx</module>
+		<module>xchange-anx</module>
+		<module>xchange-bitbay</module>
+		<module>xchange-bitcoinaverage</module>
 		<module>xchange-bitcoincharts</module>
+		<module>xchange-bitcoinium</module>
+		<module>xchange-bitcurex</module>
+		<module>xchange-bitfinex</module>
+		<module>xchange-bitmarket</module>
+		<module>xchange-bitstamp</module>
+		<module>xchange-blockchain</module>
+		<module>xchange-btccentral</module>
+		<module>xchange-btcchina</module>
+		<module>xchange-btce</module>
+		<module>xchange-bter</module>
+		<module>xchange-campbx</module>
+		<module>xchange-cavirtex</module>
+		<module>xchange-cexio</module>
+		<module>xchange-coinbase</module>
+		<module>xchange-coinfloor</module>
+		<module>xchange-core</module>
+		<module>xchange-cryptotrade</module>
+		<module>xchange-cryptsy</module>
+		<module>xchange-examples</module>
+		<module>xchange-hitbtc</module>
+		<module>xchange-itbit</module>
+		<module>xchange-justcoin</module>
+		<module>xchange-kraken</module>
+		<module>xchange-lakebtc</module>
+		<module>xchange-openexchangerates</module>
+		<module>xchange-vaultofsatoshi</module>
+		<module>xchange-vircurex</module>
 	</modules>
+
+	<repositories>
+		<repository>
+			<id>sonatype-oss-public</id>
+			<url>https://oss.sonatype.org/content/groups/public/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 	<dependencyManagement>
 		<dependencies>
@@ -87,39 +126,24 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.7.2</version>
+				<version>1.7.7</version>
 			</dependency>
 
 			<!-- SLF4J implementation for use in testing -->
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.0.9</version>
+				<version>1.1.2</version>
 				<!-- Test scope prevents this implementation bleeding out to consuming 
 					applications -->
 				<scope>test</scope>
-			</dependency>
-
-			<!-- All money handling is through Joda Money -->
-			<dependency>
-				<groupId>org.joda</groupId>
-				<artifactId>joda-money</artifactId>
-				<!-- Require 0.8+ to support Bitcoin (see #40) -->
-				<version>0.8</version>
-			</dependency>
-
-			<!-- Rest client utility -->
-			<dependency>
-				<groupId>com.github.mmazi</groupId>
-				<artifactId>rescu</artifactId>
-				<version>1.0.0</version>
 			</dependency>
 
 			<!-- Charting -->
 			<dependency>
 				<groupId>com.xeiam.xchart</groupId>
 				<artifactId>xchart</artifactId>
-				<version>2.1.0</version>
+				<version>2.3.2</version>
 			</dependency>
 
 			<!-- Websocket library -->
@@ -129,16 +153,48 @@
 				<version>1.3.0</version>
 			</dependency>
 
+			<!-- Pusher -->
+			<dependency>
+				<groupId>com.pusher</groupId>
+				<artifactId>pusher-java-client</artifactId>
+				<version>0.3.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.bouncycastle</groupId>
+				<artifactId>bcprov-jdk15on</artifactId>
+				<version>1.50</version>
+			</dependency>
+
+			<!-- Rest client -->
+			<dependency>
+				<groupId>com.github.mmazi</groupId>
+				<artifactId>rescu</artifactId>
+				<version>1.6.1-SNAPSHOT</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
+	<!-- All children will have these dependencies -->
 	<dependencies>
+
+		<!-- JUnit for testing -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- FEST for fluent test assertions -->
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert-core</artifactId>
+			<version>2.0M10</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
@@ -155,7 +211,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.4</version>
+						<version>1.5</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -169,40 +225,36 @@
 				</plugins>
 			</build>
 		</profile>
-		<!-- use: mvn clean integration-test -P run-integration-tests -->
-		<!-- http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#groups -->
+
 		<profile>
-			<id>run-integration-tests</id>
+			<id>doclint-java8-disable</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.9</version>
+						<artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
-							<excludedGroups>none</excludedGroups>
-							<skip>false</skip>
-							<!-- <skipTests>false</skipTests> -->
-							<useFile>false</useFile>
-							<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-							<excludes>
-								<exclude>none</exclude>
-							</excludes>
-							<includes>
-								<include>**/*Test*.java</include>
-								<include>**/*Test.java</include>
-								<!-- <include>**/*TestCase.java</include> -->
-							</includes>
+							<additionalparam>-Xdoclint:none</additionalparam>
 						</configuration>
-						<executions>
-							<execution>
-								<id>integration-tests</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>test</goal>
-								</goals>
-							</execution>
-						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-site-plugin</artifactId>
+						<version>3.3</version>
+						<configuration>
+							<reportPlugins>
+								<plugin>
+									<groupId>org.apache.maven.plugins</groupId>
+									<artifactId>maven-javadoc-plugin</artifactId>
+									<configuration>
+										<additionalparam>-Xdoclint:none</additionalparam>
+									</configuration>
+								</plugin>
+							</reportPlugins>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
@@ -223,11 +275,12 @@
 					<showWarnings>true</showWarnings>
 				</configuration>
 			</plugin>
+
 			<!-- Generates a source code JAR during package -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.2.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -237,11 +290,12 @@
 					</execution>
 				</executions>
 			</plugin>
+
 			<!-- Generates a Javadoc JAR during package -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
+				<version>2.9.1</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -251,51 +305,30 @@
 					</execution>
 				</executions>
 			</plugin>
+
 			<!-- for deploying to Maven Central -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.5</version>
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
-			<!-- normally don't run the test classes annotated with @OnlineTest -->
+
+
+			<!-- for header in all .java files -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>${maven-surefire-plugin.version}</version>
-					</dependency>
-				</dependencies>
+				<groupId>com.mycila.maven-license-plugin</groupId>
+				<artifactId>maven-license-plugin</artifactId>
+				<version>1.10.b1</version>
 				<configuration>
-					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
+					<header>etc/header.txt</header>
+					<aggregate>true</aggregate>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
 				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>${maven-surefire-plugin.version}</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -303,10 +336,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- Versioning -->
-		<maven-surefire-plugin.version>2.13</maven-surefire-plugin.version>
-
 	</properties>
 
 </project>
